# gemBS

./: .gitignore  .gitmodules  Dockerfile  README.md  Singularity  setup.py
tools/bs_call/: .gitignore  Makefile  README.md  configure  configure.ac
tools/bs_call/gt/: Makefile  Makefile.mk.in  config.status  configure  configure.ac
tools/bs_call/include/: bs_call.h  dbSNP_idx.h  dbSNP_utils.h  jsmn.h  mm.h
tools/bs_call/src/: Makefile  Makefile.mk.in  al_utils.c  bs_call.c  call_genotypes.c  dbSNP_alias.c  dbSNP_bins.c  dbSNP_buffer.c  dbSNP_command_line.c  dbSNP_compress.c  dbSNP_idx.c  dbSNP_input.c  dbSNP_json.c  dbSNP_output.c  dbSNP_select.c  dbSNP_utils.c  genotype_model.c  get_sequence.c  get_template_vector.c  init_param.c  input_sam.c  meth_profile.c  mm.c  parse_args.c  print_vcf.c  process.c  process_sam_header.c  process_template.c  read_reference.c  read_utils.c  stats.c  stats_utils.c
tools/loki/: Changes  Makefile.in  README  README.known_systems  README.multiple_records  README.parallel_runs  acinclude.m4  add_copy.pl  chk.pl  configure  configure.in  libsrc.tar  scr
tools/loki/CVS/: Entries
tools/loki/autom4te.cache/: output.0  requests  traces.0
tools/loki/bzip2-1.0.2/: bzip2  bzip2recover  libbz2.dylib
tools/loki/data/: gaw9_d1a1-15  gaw9_phenotyp  jvped  jvped1  jvped2  jvped_x
tools/loki/docs/: docfig1.eps  loki_doc.ps  loki_doc.tex  loki_faq.ps  loki_faq.tex
tools/loki/fenrissrc/: Makefile  Makefile.in  a.out1  alloc_fenris.c  calc_pen.c  calc_pen.h  count_bits.c  estimate_freq.c  fenris.c  fenris.h  fenris_complex_peel.c  fenris_peel.h  fenris_pen.c  fenris_setup.c  fenris_simple_macros.h  fenris_simple_peel.c  fenris_utils.c  fseg_pen.c  fseg_pen1.c  log  logfile  peel_freq.c  peel_init.c  pen_model.c  test.c  test1.c  test2.c  test3.c  test4.c  test5.c  test5a.c
tools/loki/include/: .#shared_peel.h.1.6  .#utils.h.1.18  config.h~  hash.h  libhdr.h  libhdr.h~  link_list.h  lk_malloc.h  lkgetopt.h  loki_compress.h~  min_deg.h  ranlib.h  stat_funcs.h~  string_utils.h~  version.h
tools/loki/libparsesrc/: .depend  Makefile.in  control2  control3  func_utils.c  logfile  parse.output  parse.tab.c  parse.tab.h  parse1.y  parse_utils.c  parser.h  test.pl  test.y
tools/loki/libsrc/: .#lk_malloc.c.1.2  .#ranlib.c.1.4  .#string_utils.c.1.15  genrand.c  hash.c  io_stuff.c  mkbackup.c  peel_utils.c  qsort.c  ran_xtra.c  ranlib.c  string_utils.c  string_utils_dev.c  strsep.c
tools/loki/lokisrc/: .#gen_elim.c.1.34  .#gen_elim_err.c.1.6  .#gen_pen.c.1.17  .#get_peelseq.c.1.12  .#init_marker.c.1.15  .#kinship.c.1.5  .#kinship.h.1.3  .#locus.h.1.4  .#loki.c.1.52  .#loki.h.1.39  .#loki_complex_peel.c.1.19  .#loki_ibd.c.1.38  .#loki_peel.c.1.29  .#loki_peel.h.1.13  .#loki_pen.c.1.15  .#loki_sample.c.1.12  .#loki_sample.c.1.59  .#loki_simple_peel.c.1.15  .#loki_simple_sample.c.1.15  .#loki_tlmoves.c.1.24  .#loki_trait_simple_sample.c.1.8  .#loki_utils.c.1.26  .#oldpeel_compat.c.1.10  .#ped_utils.c.1.12  .#peel_to_par.c.1.11  .#process_mark.c.1.18  .#process_mark_x.c.1.14  .#pseudo_chrom.c.1.7  .#read_xmlfile.c.1.29  .#recode_alleles.c.1.4  .#sample_effects.c.1.11  .#sample_nu.c.1.9  .#seg_pen.c.1.29  .#set_recode.c.1.9  .#sort_fam_error.c.1.1  .depend  Makefile.in  alloc_loki.c  calc_nrm.c  calc_var_locus.c  (+105 more)
tools/loki/orig_sources/: README  getopt.h  getopt_long.c  mt19937.c
tools/loki/prepsrc/: .#control_parse.y.1.24  .#gen_elim.c.1.21  .#prep.c.1.38  .#prep.c.1.5  .#recode_fact.c.1.8  .#restrict_data.c.1.11  .#setup_ped.c.1.14  .depend  Makefile.in  check_het.c  check_het.h  check_inbr.c  cleanup.c  control_lex.c  control_lex.l  control_parse.c  control_parse.h  control_parse.y  gen_elim.c  gen_elim.c.orig  get_marker_name.c  init_fam.c  log  logfile  match_records.c  output_data.c  prep.c  prep.h  prep_do_peel_op.c  prep_file_com.c  prep_input.h  prep_peel.h  prep_utils.c  prep_utils.h  read_control.c  read_data.c  read_data1.c  restrict_data.c  scan.h  scanner.h  (+4 more)
tools/loki/test/: Makefile.in  Questions  README_optimization  compare.pl  control  control1  control_gaw9.in  control_jv  control_jv1  control_jv_cens  control_jv_hap  control_jv_lm  h1  (+32 more)
tools/utils/: Makefile  Makefile.in  bbi.c  calc_gt_prob.c  command_line.c  configure  configure.ac  gemBS_cat.c  gemBS_cat.h  md5_fasta.c  mextr.c  output.c  output_headers.c  readNameClean.c  uthash.h  utils.h
(+266 files in other folders)
